fixed contact form overflowing page

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -5,6 +5,14 @@
     margin-top: -5px;
   }
 
+  .contact-form textarea {
+    width: 200px !important;
+  }
+
+  .contact-form input[type="text"] {
+    width: 200px !important;
+  }
+
   .btn {
     font-size: 14px;
     padding: 5px;
